# Model-Context-Protocol-Agent-to-Agent-Protocol

./: .gitignore  link.txt
a2a/adk_agent/: pyproject.toml
a2a/adk_agent/agents/google_adk/: agent.py
docker/mcp-client/: client-config-for-multi-docker.json  client-for-multi-docker.py  client.py  pyproject.toml  run-command.txt
docker/mcp-server/: Dockerfile  docker-command.txt  requirements.txt  server-gemini-docker.py
docker/mcp-server/workspace/: lam-3.txt  napoleon-2.txt  napoleon.txt  test-multi-docker.txt
mcp-sse/mcp-client-sse/: client-sse.py  main.py  pyproject.toml
mcp-sse/mcp-server-sse/: main.py  pyproject.toml  terminal_server_sse.py
mcp-sse/mcp-server-sse/workspace/: result.txt
mcp/mcp-client/: client.py  langchain-mcp-client.py  pyproject.toml
mcp/mcp_server/: pyproject.toml  requirements.txt  terminal_server.py  terminal_server_for_gemini.py
mcp/workspace/: langchain_mcp_client_test.txt  mcp-client-success.txt
mcp/workspace/claude_output/: terminal_server_test.txt
